feat - just improving the layout

--- a/src/_includes/layouts/story-layout.njk
+++ b/src/_includes/layouts/story-layout.njk
@@ -1,6 +1,6 @@
 {% block content %}
     {% include "partials/site-breadcrumbs.njk" %}
-    <div class="story-with-sidebar" data-layout="with-sidebar" data-props="side:left">
+    <div class="story-with-sidebar" data-layout="with-sidebar" data-props="side:left space:l">
         <aside id="story-details">
             {% block aside %}{% endblock %}
         </aside>
