--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -15,7 +15,8 @@ h1,
 h2,
 h3, h4, h5, h6 {
   line-height: 1.2;
-  max-width: 40ch;
+  --measure: 40ch;
+  max-width: var(--measure);
   font-weight: normal;
   font-family: var(--font-sans-serif);
   /* text-transform: capitalize; */
