fix(SEO): :ambulance: remove error page from indexation

--- a/src/pages/robots.njk
+++ b/src/pages/robots.njk
@@ -2,7 +2,7 @@
 permalink: /robots.txt
 eleventyExcludeFromCollections: true
 ---
-Sitemap: {{meta.site_url}}/sitemap.xml
-
 User-agent: *
-Disallow:
+Disallow: /404.html
+Host: {{meta.site_url}}
+Sitemap: {{meta.site_url}}/sitemap.xml
