--- a/src/_includes/partials/reference-item.njk
+++ b/src/_includes/partials/reference-item.njk
@@ -1,21 +1,11 @@
 <li class="reference-item" id="fn{{ loop.index0 }}">
-    {# <div data-layout="cluster" data-props="x:between">
-                                    {% if reference.cite %}
-                                        <p>{{ reference.cite }}</p>
-                                    {% endif %}
-                                    <p>({{ reference.type.name }})</p>
-                                </div> #}
-    {# <a  target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
-        {{ reference.name }}
-    </a> #}
-       <a data-button="link"  target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
-      {# <span aria-hidden data-font="emoji">🔗</span> #}
-        {{ reference.cite if reference.cite }} {{ reference.name }}
-       </a>
-    {# {% if reference.summary %}
-                                                                                    <p style="text-align: justify;">{{ reference.summary | truncate(230) }}</p>
-                                                                                {% endif %} #}
-    {# {% if reference.citation %}
-                                                                                    <small>{{ reference.citation }}</small>
-                                                                                {% endif %} #}
+    <a
+        data-button="text" rel="noopener" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
+        <span>
+            <span>
+                {{ reference.name }}
+            </span>
+            <i>({{ reference.cite if reference.cite }})</i>
+        </span>
+    </a>
 </li>
