--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,24 +1,26 @@
 <footer class="site-footer" data-layout="switcher" data-props="invert">
     <div class="padded-container" data-layout="switcher" data-props="y:start">
         <div data-layout="stack" data-props="x:start space:2xs">
-            <p data-heading="4" data-font="emoji">{{meta.site_emoji}}</p>
-            <span data-font="sans-serif" data-heading="6">{{meta.site_name}}</span>
-        </div>
-        <div data-layout="stack" data-props="x:start">
-            <h2 data-heading="6">Categories</h2>
-            <div data-layout="cluster">
-                {%- for category in collections.categories %}
-                    <a href="/categories/{{ category | slugify }}" data-button="tag">{{ category }}</a>
-                {% endfor -%}
-            </div>
+            <h2 data-heading="6">{{meta.site_name}}</h2>
+            <a data-link="noHover" href="#main-content" data-heading="4" data-font="emoji">{{meta.site_emoji}}
+                <span class="visually-hidden">Back to main content</span>
+            </a>
         </div>
         <nav data-layout="stack" data-props="x:start">
             <h2 data-heading="6">Links</h2>
-            <div data-layout="stack" data-props="x:start">
+            <div data-layout="cluster" data-props="x:start">
                 {%- for page in collections.webpage %}
                     <a data-link data-font="sans-serif" href="{{ page.url }}">{{ page.data.title }}</a>
                 {% endfor -%}
             </div>
         </nav>
+        <div data-layout="stack" data-props="x:start">
+            <h2 data-heading="6">Categories</h2>
+            <div data-layout="cluster">
+                {%- for category in collections.categories %}
+                    <a href="/categories/{{ category | slugify }}" data-button="tag small">{{ category }}</a>
+                {% endfor -%}
+            </div>
+        </div>
     </div>
 </footer>
