--- a/src/pages/contribution/contribute-page.njk
+++ b/src/pages/contribution/contribute-page.njk
@@ -4,38 +4,37 @@ tags:
     - webpage
 layout: layouts/nested-page-layout.njk
 permalink: /contribute.html
+eleventyNavigation:
+  key: Contribute
+  parent: Home
 ---
 
 <header>
     <h1 data-heading="2">{{ title }}</h1>
 </header>
-<section class="contribute-story-sidebar" data-layout="with-sidebar" data-props="side:right">
+<section class="contribute-story-sidebar" data-layout="stack">
     <div data-layout="stack">
-        <h2 data-heading="4">Add a story</h2>
+        <h2 data-heading="5">Know something interesting about frontend development ?</h2>
         <p>
             If you would like to provide feedback or contribute content to Frontend Stories, you can submit a form on a specific
             story page or follow this link to add a new one. We welcome all of your comments, suggestions and criticisms!
         </p>
     </div>
     <div>
-        <form class="contribute-story-form" data-layout="stack" data-props="y:start x:start" action="{{ contribute.tally_url }}" target="_blank" method="get" name="contribution">
+        <form data-font="sans-serif" class="contribute-story-form" data-layout="stack" data-props="y:start x:start" action="{{ contribute.tally_url }}" target="_blank" method="get" name="contribution">
             <label for="title">Title</label>
             <input type="text" id="title" name="title" required="true"/>
-            <small>The core message
-            </small>
+            <small>The core message in a sentence</small>
             <label for="description">Description</label>
             <textarea rows="4" maxlength="500" type="text" id="description" name="description" required="true"></textarea>
+            <small>Short description under 500 characters</small>
             <label for="category">Category</label>
             <select name="category" id="category">
                 {%- for category in collections.categories %}
                     <option value="{{ category }}">{{ category }}</option>
                 {% endfor %}
             </select>
-            {# </div> #}
             <button data-button="primary">Submit</button>
         </form>
     </div>
 </section>
-{# <section data-layout="stack" data-props="x:start space:s">
-    <h2 data-heading="4">Provide feedback</h2>
-</section> #}
