feat: ✨ add hero image

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -6,11 +6,11 @@
         </a>
         <div data-layout="cluster" data-props="space:s">
             <a data-font="sans-serif" data-link="data-link" href="/stories">
-                Stories
+                All stories
             </a>
-            <a data-font="sans-serif" data-link="data-link" href="/about">
+            {# <a data-font="sans-serif" data-link="data-link" href="/about">
                 About
-            </a>
+            </a> #}
         </div>
     </div>
 </header>
