--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -16,15 +16,24 @@ eleventyComputed:
 ---
 
 {# <article data-layout="stack" data-props="space:2xl"> #}
-<section data-layout="cover">
-    <div data-layout="stack" data-props="centered space:m">
-        <div data-layout="stack">
-            <h1 data-heading="2">{{ meta.site_name }}</h1>
+<section data-layout="cover" data-props="intrinsic" style=" --min-height: calc(70vh - var(--header-height, 0px));">
+    <div
+        data-layout="with-sidebar "
+        data-props="centered side:right space:m "
+        style="--side-width: calc(var(--space-3xl) * 6); --space: var(--space-xl);">
+        <div data-layout="stack" data-props="y:center">
+            <h1 data-heading="1">{{ meta.site_name }}</h1>
             <p>{{ description or meta.site_description }}</p>
-            {# <div>
-                                                    <a data-button href="/stories">Browse all stories</a>
-                                                </div> #}
+            <div>
+                <a data-button="primary" href="/stories">Browse all stories</a>
+            </div>
         </div>
+        <small data-layout="center box" data-props="noBorder x:end intrinsic" style="--measure: var(--side-width)">
+            {% include "svg/hero.svg" %}
+            <i data-font="sans-serif">
+                Illustration from <a rel="noopener nofollow noreferrer"  target="_blank" href="https://absurd.design">absurd.design</a>
+            </i>
+        </small>
     </div>
 </section>
 <section id="stories" data-layout="stack" data-props="space:xs">
@@ -32,14 +41,14 @@ eleventyComputed:
         <ul role="list" data-layout="reel" data-props="noPad noBorder overflowing:noBar">
             {%- for category in collections.categoriesAndAll %}
                 <li data-layout="stack" data-active="{{ 'true' if currentCategory == category else 'false' }}">
-                    <a data-props="x:center" data-button="{{ 'active' if currentCategory == category }} tag" href="/{{ '' if category == 'All' else category | slugify }}#stories">{{ 'Latest' if category == 'All' else category }}</a>
+                    <a data-props="x:center" data-button="small {{ 'active' if currentCategory == category }} tag" href="/{{ '' if category == 'All' else category | slugify }}#stories">{{ 'Latest' if category == 'All' else category }}</a>
                 </li>
             {% endfor -%}
         </ul>
     </nav>
     {# <div data-layout="cluster" data-props="x:between"> #}
-    <h2 data-heading="3">
-        {{ "Most recent" if currentCategory == 'All' else currentCategory }}
+    <h2 data-heading="4">
+        {{ "Newest" if currentCategory == 'All' else currentCategory }}
     </h2>
     {# <a data-button href="/{{ 'stories' if currentCategory == 'All' else "categories/"+currentCategory | slugify}}">View </a> #}
     {# </div> #}
@@ -50,8 +59,11 @@ eleventyComputed:
         {% endfor -%}
     </ul>
     <span>
-        <a data-button="small" href="/{{ 'stories' if currentCategory == 'All' else "categories/"+currentCategory | slugify }}">
-            View all
+        {% set view_all_url = "stories" if currentCategory == "All" else "categories/"+currentCategory | slugify%}
+        <a
+            data-button="link"
+            href="/{{view_all_url}}">
+             View all
             <span data-font="emoji" aria-hidden="true">
                 ▶
             </span>
@@ -59,17 +71,17 @@ eleventyComputed:
     </span>
 </section>
 {# <section>
-    <button data-button="primary">Base</button>
-    <button data-button="outline">Base</button>
-    <button data-button="text">Base</button>
-    <br/>
-    <button disabled data-button="primary">Base</button>
-    <button disabled data-button="outline">Base</button>
-    <button disabled data-button="text">Base</button>
-    <form action="{{ contribute.tally_url }}" target="_blank" method="get" name="contribution">
-        <label for="title">Title</label>
-        <input type="text" id="title" name="title" required="true"/>
-        <button data-button="primary">Submit</button>
-    </form>
-</section> #}
+                <button data-button="primary">Base</button>
+                <button data-button="outline">Base</button>
+                <button data-button="text">Base</button>
+                <br/>
+                <button disabled data-button="primary">Base</button>
+                <button disabled data-button="outline">Base</button>
+                <button disabled data-button="text">Base</button>
+                <form action="{{ contribute.tally_url }}" target="_blank" method="get" name="contribution">
+                    <label for="title">Title</label>
+                    <input type="text" id="title" name="title" required="true"/>
+                    <button data-button="primary">Submit</button>
+                </form>
+            </section> #}
 {# </article> #}
