feat: ⚡️ add social sharing and contribution actions

--- a/src/css/_tokens.css
+++ b/src/css/_tokens.css
@@ -147,5 +147,8 @@
 [data-props~="width:content"] {
   width: max-content;
 }
+[data-props~="text:center"] {
+text-align: center;
+}
 
 /*=====  End of LAYOUT UTILITIES  ======*/
