--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -1,5 +1,5 @@
 <head>
-    {% set meta_title = meta.site_name if page.url === "/" else meta.site_name + " - " + title or " " %}
+    {% set meta_title = meta.site_name if page.url === "/" else title or " " + meta.site_name + " - "  %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="{{meta.twitter_name}}">
     <meta name="twitter:site" content="{{meta.twitter_name}}">
-    <meta name="twitter:text:title" content="{{meta.site_name if page.url === "/" else meta.site_name + " - " + title or " "}}">
+    <meta name="twitter:text:title" content="{{meta_title}}">
     <link rel="manifest" href="/manifest.json" />
     {% if emojicon %}
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{emojicon}}</text></svg>">
