--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -16,7 +16,7 @@ eleventyComputed:
 ---
 
 {# <article data-layout="stack" data-props="space:2xl"> #}
-<section data-layout="cover" data-props="intrinsic" style=" --min-height: calc(70vh - var(--header-height, 0px));">
+<section data-layout="cover" data-props="noPad" style=" --min-height: calc(70vh - var(--header-height, 0px));">
     <div
         data-layout="with-sidebar "
         data-props="centered side:right space:m "
