--- a/src/pages/stories/story-page.njk
+++ b/src/pages/stories/story-page.njk
@@ -21,22 +21,45 @@ eleventyComputed:
 {% extends "layouts/story-layout.njk" %}
 {% set story_contribution_url = contribute.tally_url+"?slugs="+story.slugs+"&title="+story.name+"&category="+story.category.name %}
 {% block aside %}
-    <p itemprop="author" itemscope itemtype="http://schema.org/Person">
+    <div data-layout="stack" data-props="space:s">
+
+    {# <p itemprop="author" itemscope itemtype="http://schema.org/Person">
         <span aria-hidden="true" data-font="emoji">👤</span>
         Written by
         <span itemprop="name">
             {{ meta.author.name }}
         </span>
         <link itemprop="url" href="{{ meta.author.url }}"/>
-    </p>
-    <span>
+    </p> #}
+    {# <span data-props="space:0">
         <span data-font="emoji">⏱</span>
         {{ story.description | emojiReadTime }}
-    </span>
+    </span> #}
+
+        <h2 id="readMore" data-heading="5">Read More</h2>
+        <p>Have a look at related posts including:</p>
+        {% set entries = stories | similarStories(story.id, story.category.name) | limitTo(1) %}
+        {% if entries.length == 0 %}
+        {% set entries = stories | limitTo(1) %}
+        {% endif %}
+            <ul
+                
+                data-props="space:2xs">
+                {%- for entry in entries %}
+                    <li itemscope itemtype="http://schema.org/Article">
+                        {% set color = entry.category.color %}
+                        {% set type = entry.type.name %}
+                        {# <span>{{ entry.category.name }}</span> #}
+                        <a itemprop="url" href="/{{ entry.slug }}">{{ entry.name }}</a>
+                        <meta itemprop="headline" content="{{ entry.name }}"/>
+                    </li>
+                {% endfor -%}
+            </ul>
+    </div>
     {# <figure>
-                {{ meta.site_url| qrcode | safe }}
-                <figcaption class="visually-hidden">Share link</figcaption>
-            </figure> #}
+                        {{ meta.site_url| qrcode | safe }}
+                        <figcaption class="visually-hidden">Share link</figcaption>
+                    </figure> #}
 {% endblock %}
 {% block main %}
     <header aria-labelledby="story-name" data-layout="stack" id="cover" data-props="space:m">
@@ -123,10 +146,22 @@ eleventyComputed:
                     <p>
                         Please share ideas, suggestions, or comments via direct submission, twitter or Email
                     </p>
-                    <div data-layout="switcher">
-                        <a data-button="primary" data-props="x:center" href="{{story_contribution_url}}" target="_blank"><span aria-hidden="true" data-font="emoji">🖋</span> Edit entry</a>
-                        <a data-button="primary" data-props="x:center" href="https://twitter.com/intent/tweet?text={{story.name}}&url={{meta.site_url}}{{page.url}}" target="_blank"><span aria-hidden="true" data-font="emoji">🐤</span>Mention on Twitter</a>
-                        <a data-button="primary" data-props="x:center" href="mailto:{{meta.author.email}}?subject=[FS Contribution] {{story.name}}" target="_blank"><span aria-hidden="true" data-font="emoji">✉</span>Send direct email</a>
+                    <div data-layout="switcher" style="--threshold: 78ch;">
+                        <a data-button="primary" data-props="x:center" href="{{ story_contribution_url }}" target="_blank">
+                            <span aria-hidden="true" data-font="emoji">🖋</span>
+                            Edit entry</a>
+                        <a
+                            data-button="primary"
+                            data-props="x:center"
+                            href="https://twitter.com/intent/tweet?text={{ story.name }}&url={{ meta.site_url }}{{ page.url }}"
+                            target="_blank">
+                            <span aria-hidden="true" data-font="emoji">🐤</span>Mention on Twitter</a>
+                        <a
+                            data-button="primary"
+                            data-props="x:center"
+                            href="mailto:{{ meta.author.email }}?subject=[FS Contribution] {{ story.name }}"
+                            target="_blank">
+                            <span aria-hidden="true" data-font="emoji">✉</span>Send direct email</a>
                     </div>
                 </div>
             </div>
