--- a/src/pages/stories/story-page.njk
+++ b/src/pages/stories/story-page.njk
@@ -153,7 +153,7 @@ eleventyComputed:
                         <a
                             data-button="primary"
                             data-props="x:center"
-                            href="https://twitter.com/intent/tweet?text={{ story.name }}&url={{ meta.site_url }}{{ page.url }}"
+                            href="https://twitter.com/intent/tweet?text={{ story.name }}%20via%20@FrontendStories&url={{ meta.site_url }}{{ page.url }}"
                             target="_blank">
                             <span aria-hidden="true" data-font="emoji">🐤</span>Mention on Twitter</a>
                         <a
