--- a/src/pages/feed.njk
+++ b/src/pages/feed.njk
@@ -3,7 +3,7 @@ permalink: "feed.xml"
 eleventyExcludeFromCollections: false
 tags:
     - webpage
-title: "RSS"
+title: "Subscribe to RSS"
 subtitle: "Collection of research findings about frontend development"
 ---
 <?xml version="1.0" encoding="utf-8"?>
